// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`new/local/app/server/startHttp should configure and start the http app (PORT 80) 1`] = `
Array [
  Array [
    "express",
    Array [],
  ],
  Array [
    "express.static",
    Array [
      "'process.env.BUILD_PATH'",
    ],
  ],
  Array [
    "app.use",
    Array [
      Array [
        "express.static",
        Array [
          "'process.env.BUILD_PATH'",
        ],
      ],
    ],
  ],
  Array [
    "app.use",
    Array [
      "/api",
      "new/local/app/server/api",
    ],
  ],
  Array [
    "app.get",
    Array [
      "*",
      "new/local/app/server/sendFrontEndApp",
    ],
  ],
  Array [
    "handleAppListen",
    Array [
      80,
    ],
  ],
  Array [
    "app.listen",
    Array [
      80,
      Array [
        "handleAppListen",
        Array [
          80,
        ],
      ],
    ],
  ],
]
`;

exports[`new/local/app/server/startHttp should configure and start the http app (PORT null) 1`] = `
Array [
  Array [
    "express",
    Array [],
  ],
  Array [
    "express.static",
    Array [
      "'process.env.BUILD_PATH'",
    ],
  ],
  Array [
    "app.use",
    Array [
      Array [
        "express.static",
        Array [
          "'process.env.BUILD_PATH'",
        ],
      ],
    ],
  ],
  Array [
    "app.use",
    Array [
      "/api",
      "new/local/app/server/api",
    ],
  ],
  Array [
    "app.get",
    Array [
      "*",
      "new/local/app/server/sendFrontEndApp",
    ],
  ],
  Array [
    "handleAppListen",
    Array [
      5000,
    ],
  ],
  Array [
    "app.listen",
    Array [
      5000,
      Array [
        "handleAppListen",
        Array [
          5000,
        ],
      ],
    ],
  ],
]
`;

exports[`new/local/app/server/startHttp should utilize the dependency APIs correctly 1`] = `
Object {
  "express": "^4.17.1",
}
`;
